--- a/weatherUI/WeatherWithIcon.ui
+++ b/weatherUI/WeatherWithIcon.ui
@@ -784,7 +784,7 @@ font: 19px &quot;Impact&quot;;</string>
 font: 25px &quot;Impact&quot;;</string>
     </property>
     <property name="text">
-     <string>+1</string>
+     <string>+1d</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -813,7 +813,7 @@ font: 25px &quot;Impact&quot;;</string>
 font: 25px &quot;Impact&quot;;</string>
     </property>
     <property name="text">
-     <string>+2</string>
+     <string>+2d</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -842,7 +842,7 @@ font: 25px &quot;Impact&quot;;</string>
 font: 25px &quot;Impact&quot;;</string>
     </property>
     <property name="text">
-     <string>+3</string>
+     <string>+3d</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -871,7 +871,7 @@ font: 25px &quot;Impact&quot;;</string>
 font: 25px &quot;Impact&quot;;</string>
     </property>
     <property name="text">
-     <string>+4</string>
+     <string>+4d</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -900,7 +900,7 @@ font: 25px &quot;Impact&quot;;</string>
 font: 25px &quot;Impact&quot;;</string>
     </property>
     <property name="text">
-     <string>+5</string>
+     <string>+5d</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -1742,6 +1742,26 @@ font: 25px &quot;Impact&quot;;</string>
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="timeShow">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>570</y>
+      <width>501</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);
+font: 25px &quot;Impact&quot;;</string>
+    </property>
+    <property name="text">
+     <string>Time</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
    <zorder>backgroun</zorder>
    <zorder>bigcircul</zorder>
    <zorder>circul1</zorder>
@@ -1800,6 +1820,7 @@ font: 25px &quot;Impact&quot;;</string>
    <zorder>saat8</zorder>
    <zorder>tempHour1_2</zorder>
    <zorder>error</zorder>
+   <zorder>timeShow</zorder>
   </widget>
  </widget>
  <tabstops>
